--- a/styles.scss
+++ b/styles.scss
@@ -11,7 +11,7 @@ $bg-soft-violet: hsl(273, 75%, 66%);
 $bg-soft-blue: hsl(240, 73%, 65%);
 
 body {
-    background-color: $bg-soft-violet;
+    background-image: linear-gradient($bg-soft-violet, $bg-soft-blue);
     font-family: $primary-font;
 }
 
@@ -36,18 +36,80 @@ body {
     margin: 150px 20px;
     padding: 40px 20px;
     border-radius: 20px;
+    position: relative;
+
+    &::before {
+        position: absolute;
+        content: "";
+        background: url("images/illustration-woman-online-mobile.svg") no-repeat;
+        width: 266px;
+        height: 196px;
+        top: -108px;
+        right: 5%;
+    }
+
+    @media (min-width: 375px) {
+        max-width: 278px;
+        width: 100%;
+        height: 100%;
+        margin: 200px auto;
+
+        &::before {
+            right: 13%;
+        }
+    }
+    
+    @media (min-width: 768px) {
+        max-width: 500px;
+
+        &::before {
+            right: 28%;
+        }
+    }
 
     @media (min-width: 1024px) {
         flex-direction: row;
+        justify-content: flex-end;
+        max-width: 700px;
+        padding: 100px 80px;
+        
+        &::before {
+            background: url("images/illustration-woman-online-desktop.svg") no-repeat;
+            width: 472px;
+            height: 359px;
+            //background-position: top 131px left -10px, center left;
+            top: 10%;
+            right: 54%;
+        }
+
+        /*&::after {
+            position: absolute;
+            content: "";
+            background: url("images/illustration-box-desktop.svg") no-repeat;
+            width: 191px;
+            height: 184px;
+            top: 131px;
+            left: -10px;
+        }*/
     }
 
     .image {
-        width: 266px;
-        height: 196px;
         margin: -150px auto 0 auto;
 
+        @media (min-width: 375px) {
+            width: 266px;
+            height: 196px;
+        }
+
         @media (min-width: 1024px) {
-            margin: 0;
+            width: 472px;
+            height: 359px;
+            margin: 0 50px 0 -125px;
+            //flex-basis: 50%;
+        }
+
+        @media (min-width: 1280px) {
+            margin: 0 0 0 -171px;
         }
 
         .image__left {
@@ -60,9 +122,21 @@ body {
     .accordion {
         display: flex;
         flex-direction: column;
+        margin: 50px 0 0 0;
+
+        @media (min-width: 1024px) {
+            flex-basis: 50%;
+            margin: 0;
+            height: 100%;
+        }
 
         h1 {
             margin: 20px auto;
+            text-transform: uppercase;
+
+            @media (min-width: 1024px) {
+                margin: 0 0 30px 0;
+            }
         }
 
         .accordion__faq {
@@ -80,6 +154,7 @@ body {
                 transition: ease .5s;
                 border-bottom: 1px solid $hr-light-gray-blue;
                 padding: 15px 0;
+                margin: 0 10px 0 0;
                 font-size: 12px;
 
                 @media (min-width: 768px) {
@@ -100,6 +175,7 @@ body {
             .accordion__content {
                 font-size: 12px;
                 border-bottom: 1px solid $hr-light-gray-blue;
+                margin: 0 20px 0 0;
 
                 @media (min-width: 768px) {
                     font-size: 16px;
