--- a/styles.css
+++ b/styles.css
@@ -149,6 +149,7 @@ body {
 .container .accordion h1 {
   margin: 20px auto;
   text-transform: uppercase;
+  color: #1d1e35;
 }
 
 @media (min-width: 1024px) {
@@ -181,6 +182,7 @@ body {
   padding: 15px 0;
   margin: 0 10px 0 0;
   font-size: 12px;
+  color: #4a4b5e;
 }
 
 @media (min-width: 768px) {
@@ -203,6 +205,10 @@ body {
   font-size: 12px;
   border-bottom: 1px solid #e7e7e9;
   margin: 0 20px 0 0;
+}
+
+.container .accordion .accordion__faq .accordion__content p {
+  color: #787887;
 }
 
 @media (min-width: 768px) {
