--- a/styles.scss
+++ b/styles.scss
@@ -105,7 +105,6 @@ body {
             width: 472px;
             height: 359px;
             margin: 0 50px 0 -125px;
-            //flex-basis: 50%;
         }
 
         @media (min-width: 1280px) {
@@ -133,6 +132,7 @@ body {
         h1 {
             margin: 20px auto;
             text-transform: uppercase;
+            color: $text-dark-blue;
 
             @media (min-width: 1024px) {
                 margin: 0 0 30px 0;
@@ -156,6 +156,7 @@ body {
                 padding: 15px 0;
                 margin: 0 10px 0 0;
                 font-size: 12px;
+                color: $text-very-dark-gray-blue;
 
                 @media (min-width: 768px) {
                     font-size: 16px;
@@ -176,6 +177,11 @@ body {
                 font-size: 12px;
                 border-bottom: 1px solid $hr-light-gray-blue;
                 margin: 0 20px 0 0;
+
+                p {
+                    color: $text-dark-gray-blue;
+                }
+                
 
                 @media (min-width: 768px) {
                     font-size: 16px;
