--- a/styles.css
+++ b/styles.css
@@ -1,241 +1,234 @@
 body {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#af67e9), to(#6565e7));
-  background-image: linear-gradient(#af67e9, #6565e7);
-  font-family: "Kumbh Sans", sans-serif;
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#af67e9), to(#6565e7));
+	background-image: linear-gradient(#af67e9, #6565e7);
+	font-family: "Kumbh Sans", sans-serif;
+	margin: 0;
 }
 
-.attribution {
-  font-size: 11px;
-  text-align: center;
-  font-family: "Kumbh Sans", sans-serif;
-}
-
-.attribution a {
-  text-decoration: none;
-  font-weight: bold;
-  color: #1d1e35;
-}
-
-.attribution a:hover {
-  text-decoration: underline;
+.main-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
 }
 
 .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  background-color: white;
-  margin: 150px 20px;
-  padding: 40px 20px;
-  border-radius: 20px;
-  position: relative;
+	display: flex;
+	flex-direction: column;
+	background-color: white;
+	margin: 150px 20px;
+	padding: 40px 20px;
+	border-radius: 20px;
+	position: relative;
+	
+    margin: 0;
+	max-width: 250px;
+	width: 100%;
+}
+
+@media (max-width: 320px) {
+	.container {
+		max-height: 344px;
+		height: 100%;
+	}
 }
 
 .container::before {
-  position: absolute;
-  content: "";
-  background: url("images/illustration-woman-online-mobile.svg") no-repeat;
-  width: 266px;
-  height: 196px;
-  top: -108px;
-  right: 5%;
+	position: absolute;
+	content: "";
+	background: url("images/illustration-woman-online-mobile.svg") no-repeat;
+	width: 266px;
+	height: 196px;
+	top: -108px;
+	right: 5%;
 }
 
 @media (min-width: 375px) {
-  .container {
-    max-width: 278px;
-    width: 100%;
-    height: 100%;
-    margin: 200px auto;
-  }
-  .container::before {
-    right: 13%;
-  }
+	.container {
+		max-width: 278px;
+		width: 100%;
+	}
+	.container::before {
+		right: 13%;
+	}
 }
 
 @media (min-width: 768px) {
-  .container {
-    max-width: 500px;
-  }
-  .container::before {
-    right: 28%;
-  }
+	.container {
+		max-width: 500px;
+	}
+	.container::before {
+		right: 28%;
+	}
 }
 
 @media (min-width: 1024px) {
-  .container {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
-    max-width: 700px;
-    padding: 100px 80px;
-    /*&::after {
-            position: absolute;
-            content: "";
-            background: url("images/illustration-box-desktop.svg") no-repeat;
-            width: 191px;
-            height: 184px;
-            top: 131px;
-            left: -10px;
-        }*/
-  }
-  .container::before {
-    background: url("images/illustration-woman-online-desktop.svg") no-repeat;
-    width: 472px;
-    height: 359px;
-    top: 10%;
-    right: 54%;
-  }
+	.container {
+		flex-direction: row;
+		justify-content: flex-end;
+		max-width: 700px;
+		padding: 100px 80px;
+	}
+	.container::before {
+		background: url("images/illustration-woman-online-desktop.svg") no-repeat;
+		width: 472px;
+		height: 359px;
+		top: 10%;
+		right: 54%;
+	}
 }
 
 .container .image {
-  margin: -150px auto 0 auto;
+  	margin: -150px auto 0 auto;
 }
 
 @media (min-width: 375px) {
-  .container .image {
-    width: 266px;
-    height: 196px;
-  }
+	.container .image {
+		width: 266px;
+		height: 196px;
+	}
 }
 
 @media (min-width: 1024px) {
-  .container .image {
-    width: 472px;
-    height: 359px;
-    margin: 0 50px 0 -125px;
-  }
+	.container .image {
+		width: 472px;
+		height: 359px;
+		margin: 0 50px 0 -125px;
+	}
 }
 
 @media (min-width: 1280px) {
-  .container .image {
-    margin: 0 0 0 -171px;
-  }
+	.container .image {
+		margin: 0 0 0 -171px;
+	}
 }
 
 .container .image .image__left {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: contain;
-     object-fit: contain;
+	width: 100%;
+	height: 100%;
+	-o-object-fit: contain;
+		object-fit: contain;
 }
 
 .container .accordion {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin: 50px 0 0 0;
+	display: -ms-flexbox;
+	display: flex;
+			flex-direction: column;
+	margin: 50px 0 0 0;
 }
 
 @media (min-width: 1024px) {
-  .container .accordion {
-    -ms-flex-preferred-size: 50%;
-        flex-basis: 50%;
-    margin: 0;
-    height: 100%;
-  }
+	.container .accordion {
+		-ms-flex-preferred-size: 50%;
+			flex-basis: 50%;
+		margin: 0;
+		height: 100%;
+	}
 }
 
 .container .accordion h1 {
-  margin: 20px auto;
-  text-transform: uppercase;
-  color: #1d1e35;
+	margin: 20px auto;
+	text-transform: uppercase;
+	color: #1d1e35;
 }
 
 @media (min-width: 1024px) {
-  .container .accordion h1 {
-    margin: 0 0 30px 0;
-  }
+	.container .accordion h1 {
+		margin: 0 0 30px 0;
+	}
 }
 
 .container .accordion .accordion__faq {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 .container .accordion .accordion__faq input[type="checkbox"] {
-  display: none;
+  	display: none;
 }
 
 .container .accordion .accordion__faq label {
-  display: block;
-  position: relative;
-  cursor: pointer;
-  -webkit-transition: ease .5s;
-  transition: ease .5s;
-  border-bottom: 1px solid #e7e7e9;
-  padding: 15px 0;
-  margin: 0 10px 0 0;
-  font-size: 12px;
-  color: #4a4b5e;
+	display: block;
+	position: relative;
+	cursor: pointer;
+	-webkit-transition: ease .5s;
+	transition: ease .5s;
+	border-bottom: 1px solid #e7e7e9;
+	padding: 15px 0;
+	margin: 0 10px 0 0;
+	font-size: 12px;
+	color: #4a4b5e;
 }
 
 @media (min-width: 768px) {
-  .container .accordion .accordion__faq label {
-    font-size: 16px;
-  }
+	.container .accordion .accordion__faq label {
+		font-size: 16px;
+	}
 }
 
 .container .accordion .accordion__faq label::after {
-  position: absolute;
-  content: "";
-  background: url("images/icon-arrow-down.svg") no-repeat;
-  width: 10px;
-  height: 7px;
-  top: 18px;
-  right: 0;
+	position: absolute;
+	content: "";
+	background: url("images/icon-arrow-down.svg") no-repeat;
+	width: 10px;
+	height: 7px;
+	top: 18px;
+	right: 0;
 }
 
 .container .accordion .accordion__faq .accordion__content {
-  font-size: 12px;
-  border-bottom: 1px solid #e7e7e9;
-  margin: 0 20px 0 0;
+	font-size: 12px;
+	border-bottom: 1px solid #e7e7e9;
+	margin: 0 20px 0 0;
 }
 
 .container .accordion .accordion__faq .accordion__content p {
-  color: #787887;
+  	color: #787887;
 }
 
 @media (min-width: 768px) {
-  .container .accordion .accordion__faq .accordion__content {
-    font-size: 16px;
-  }
+	.container .accordion .accordion__faq .accordion__content {
+		font-size: 16px;
+	}
 }
 
 .container .accordion .accordion__faq input + label + .accordion__content {
-  display: none;
+  	display: none;
 }
 
 .container .accordion .accordion__faq input:checked + label + .accordion__content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+
+	display: flex;
 }
 
 .container .accordion .accordion__faq input:checked + label {
-  font-weight: 700;
-  border: none;
+	font-weight: 700;
+	border: none;
 }
 
 .container .accordion .accordion__faq input:checked + label::after {
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
+	-webkit-transform: rotate(180deg);
+			transform: rotate(180deg);
+}
+
+.attribution {
+	font-size: 11px;
+	text-align: center;
+	font-family: "Kumbh Sans", sans-serif;
+	position: fixed;
+    bottom: 0;
+    margin: 0 0 10px 0;
+	display: block;
+}
+
+.attribution a {
+	text-decoration: none;
+	font-weight: bold;
+	color: #1d1e35;
+}
+
+.attribution a:hover {
+  	text-decoration: underline;
 }
 /*# sourceMappingURL=styles.css.map */
